Fix overflow of text beyond box

--- a/public/css/template.css
+++ b/public/css/template.css
@@ -279,4 +279,5 @@
 .message-box{ 
     max-width: 50%; 
     border-radius: 10px;
+    overflow-wrap: break-word;
 }
